# support-agent-starter

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/support_agent_starter/: __init__.py  cli.py  core.py
tests/: test_core.py
